--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         
         <button onclick="alert ('You click Button 1!')">Button 1</button>
         <button onclick="alert ('Hello from Button 2!')">Button 2</button>
+
+        <button onclick="alert ('You click Button 3!')">Button 1</button>
+        <button onclick="alert ('Hello from Button 4!')">Button 2</button>
     </div>
 
 </body>
